# rust-adventure-workspace

./: .gitignore  netlify.toml
crates/pokemon-api/: Cargo.toml
crates/pokemon-api/src/: main.rs
crates/upload-pokemon-data/: Cargo.toml
crates/upload-pokemon-data/src/: db.rs  lib.rs  main.rs  pokemon_csv.rs
