[package]
name = "pokemon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.10.0"
http = "0.2.9"
lambda_runtime = "0.8.1"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { verson = "0.7.1", features = ["mysql", "runtime-tokio-rustls"] }
tokio = "1.29.1"
