[package]
name = "upload-pokemon-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
svix-ksuid = { version = "0.7.0", features = ["serde"] }
serde = { version = "1.0.171", features = ["derive"] }
Inflector = "0.11.4"
sqlx = { version= "0.7.0", features = ["mysql", "runtime-tokio-rustls"] }
color-eyre = "0.6.2"
tokio = { version = "1.29.1", features = ["full"] }
indicatif = "0.17.5"
futures = "0.3.28"
